# pythonodejs

./: .gitignore  .gitmodules  MANIFEST.in  README.md  SConstruct  check_imports.py  executable_wrapper.h  fix_linux_libs.py  nodepy.cpp  nodepy.h  pre_build.sh  pyproject.toml  pythonode.cpp  pythonode.h  pythonodejs.cpp  pythonodejs.h  requirements.txt  setup.py  test.py  tree.py
.github/: .releaserc.js  release-template.md
.github/workflows/: build.yml  cd.yml  ci.yml  formatting.yml  release.yml  ver.py
pythonode/: main.py
pythonodejs/: __init__.py  main.py
src/: binding.cpp
