[project]
name = "pythonodejs"
version = "0.1.3"
description = "Embed Node.js natively in your Python code."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "0880880"}]
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "pp*"
CIBW_MANYLINUX_X86_64_IMAGE = "https://quay.io/pypa/manylinux_2_34_x86_64"
CIBW_MANYLINUX_AARCH64_IMAGE = "https://quay.io/pypa/manylinux_2_34_aarch64"
before-build = "bash ./pre_build.sh"
