[project]
name = "pythonodejs"
version = "1.4.7"
description = "Embed Node.js natively in your Python code."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "0880880"}]
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "pp*"
before-build = "bash ./pre_build.sh"
